# Multi-Factor

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  MIGRATION.md  MIGRATION_v3_to_v4.md  README.md  README_new.md  _write_readme.py  backtest_demo.py  bench.py  conftest.py  dag_fail_detail.txt  dag_test2.txt  dag_test3.txt  dag_test_output.txt  data_cleaner.py  data_quality.py  deprecations.yaml  diag_run_output2.txt  download_data.py  factor_analysis.py  full_test.txt  performance_report.md  performance_report_backup.md  pyproject.toml  smoke_test.py  test.py  test_cache.parquet  test_data_cleaner.py  test_data_quality.py  test_factor_framework.py  test_lookahead_bias.py  test_output.txt  交易日历-trade_cal.csv  股票列表-stock_basic.csv
analysis/: __init__.py
config/: __init__.py  default.yaml  loader.py
docs/: FACTOR_LAB_UI_V2_1_TECH_DESIGN.md  IC_DECAY_DIAGNOSTICS_GUIDE.md  LOG_MESSAGE_STYLE_GUIDE.md  cli-contract.md
factor_framework/: __init__.py  backtest.py  dag.py  factor_engine.py  factor_zoo.py  ic_analysis.py  jit_ops.py  manifest.py  neutralize.py  operators.py  optimizer.py  pipeline.py  research_config.py
factor_framework/analytics/: __init__.py  advanced_diagnostics.py  ic_analysis.py  ic_analyzer.py  ic_decay_diagnostics.py  layer_backtester.py
factor_framework/cli/: __init__.py  main.py
factor_framework/core/: __init__.py  panel.py  returns.py
factor_framework/data/: __init__.py  store.py
factor_framework/engine/: __init__.py  cache.py  panel_builder.py
factor_framework/factors/: __init__.py  ic_analyzer.py  layer_backtester.py  meta.py  momentum.py  registry.py  transform.py  value.py  volatility.py  volume.py
factor_framework/optimize/: __init__.py  optimizer.py
factor_framework/reporting/: __init__.py
factor_framework/transform/: __init__.py  transform.py
output/backtest_demo/: comparison_summary.csv
output/backtest_demo/momentum_12_1/: ic_decay.csv  ic_series.csv  nav.csv  (+2 more)
output/factor_analysis_smoke/: factor_corr_matrix.csv  ic_summary.csv
output/momentum_12_1/: ic_decay.csv  ic_series.csv  layer_returns.csv  nav.csv  summary.csv
scripts/: __init__.py  profile_ic_diagnostics.py  run_analysis.py  run_batch.py  run_factor_screening.py  run_validation.py
stocks/stocks/: 000001_SZ.csv  000002_SZ.csv  000004_SZ.csv  000006_SZ.csv  000007_SZ.csv  000008_SZ.csv  000009_SZ.csv  000010_SZ.csv  000011_SZ.csv  000012_SZ.csv  000014_SZ.csv  000016_SZ.csv  000017_SZ.csv  000019_SZ.csv  000020_SZ.csv  000021_SZ.csv  000025_SZ.csv  000026_SZ.csv  000027_SZ.csv  000028_SZ.csv  000029_SZ.csv  000030_SZ.csv  000031_SZ.csv  000032_SZ.csv  000034_SZ.csv  000035_SZ.csv  000036_SZ.csv  000037_SZ.csv  000039_SZ.csv  000042_SZ.csv  000045_SZ.csv  000048_SZ.csv  000049_SZ.csv  000050_SZ.csv  000055_SZ.csv  000056_SZ.csv  000058_SZ.csv  000059_SZ.csv  000060_SZ.csv  000061_SZ.csv  (+5459 more)
tests/: conftest.py  test_data_cleaner.py  test_data_quality.py  test_factor_framework.py
tests/integration/: __init__.py  test_lookahead_bias.py  test_universe_lookahead.py
tests/regression/: __init__.py  test_factor_baselines.py
tests/slow/: __init__.py
tests/unit/: __init__.py  test_advanced_diagnostics.py  test_cli.py  test_data_cleaner.py  test_data_quality.py  test_deprecations.py  test_ic_decay_diagnostics.py  test_ic_diagnostics_perf.py  test_manifest.py  test_new_import_paths.py  test_phase_e1.py  test_research_config.py  test_universe_builder.py  test_universe_membership.py
universes/: __init__.py  builder.py  hs300.csv  loader.py  membership.py
validation/: __init__.py  test_lookahead_bias.py
(+14 files in other folders)
