[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "multi-factor"
version     = "3.3.0"
description = "A-share multi-factor research framework (Phase 3)"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0",
    "numpy",
    "scipy",
    "pyarrow",
    "tqdm",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist",
]

[project.scripts]
run-analysis = "scripts.run_analysis:main"
run-batch    = "scripts.run_batch:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["factor_framework*", "scripts*", "config*", "tests*"]

[tool.pytest.ini_options]
testpaths = [
    "tests/",
    "validation/",
]
addopts   = "-q --tb=short"
