[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "multi-factor"
version     = "4.0.0rc1"
description = "A-share multi-factor research framework (v4.0 — unified CLI, ResearchConfig, audit)"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0",
    "numpy",
    "scipy",
    "pyarrow",
    "tqdm",
    "pyyaml",
    "packaging>=23.0",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist",
]

[project.scripts]
# v4.0 primary CLI — install with: pip install -e .
mf           = "factor_framework.cli.main:main"
# Legacy scripts — shim wrappers, kept for backward compat (removed in v4.2)
run-analysis = "scripts.run_analysis:main"
run-batch    = "scripts.run_batch:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["factor_framework*", "scripts*", "config*", "tests*"]

[tool.pytest.ini_options]
testpaths = [
    "tests/",
    "validation/",
]
addopts   = "-q --tb=short"
markers = [
    "unit: fast, isolated function-level tests",
    "integration: cross-module flow tests (may load data)",
    "regression: IC/Sharpe snapshot baseline tests",
    "slow: large-sample tests, run on demand with -m slow",
]
